--- a/Html templates/trial/register2.html
+++ b/Html templates/trial/register2.html
@@ -21,7 +21,7 @@
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
-                                <h4 class="text-dark mb-4">Create Teacher Account!</h4>
+                                <h4 class="text-dark mb-4">Create Student Account!</h4>
                             </div>
                             <form class="user">
                                 <div class="form-group row">
