--- a/Html_templates/trial/profile.html
+++ b/Html_templates/trial/profile.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!--head-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Profile - Brand</title>
